--- a/src/main/resources/templates/pages/classroom/detail.html
+++ b/src/main/resources/templates/pages/classroom/detail.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" id="btn-people"  th:href="@{~/classroom/people}"><i class="ti-xs ti ti-users me-1"></i> People</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/pages/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
+                    <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
                 </li>
                 <li class="nav-item">
                     <!-- Button New -->
@@ -54,7 +54,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a th:href="@{~/classroom/add/material}" class="dropdown-item d-flex align-items-center">
+                                <a th:href="@{~/classroom/add/material}" id="btn-add-material" class="dropdown-item d-flex align-items-center">
                                     <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
                                 </a>
                             </li>
