--- a/src/main/resources/templates/pages/classroom/people.html
+++ b/src/main/resources/templates/pages/classroom/people.html
@@ -33,29 +33,61 @@
     </div>
     <!--/ Navbar pills -->
 
-    <div class="card-body">
-        <div class="row mb-3">
-            <div class="col-md-6 ">
-                <h4>Teachers</h4>
+    <div class="card mb-5">
+        <div class="card-body">
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <h4 class="card-title mb-0" id="teacher-title" th:href="@{~/classroom/data-teacher}">Teachers</h4>
+                </div>
+                <div class="col-md-6">
+                    <a id="btn-people-teacher" th:href="@{~/classroom/people-teacher}">
+                        <i class="fa fa-xl fa-user-plus fa-pull-right"></i>
+                    </a>
+                </div>
+                <div class="table-responsive text-nowrap">
+                    <table id="table-teacher" class="table table-striped">
+                        <thead class="table-light">
+                        <tr>
+                            <th>No</th>
+                            <th>Nomor</th>
+                            <th>Nama</th>
+                            <th>NIK</th>
+                            <th>Status</th>
+                            <th class="cell-fit">Actions</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
-            <div class="col-md-6">
-                <a id="btn-people-teacher" th:href="@{~/classroom/people-teacher}">
-                    <i class="fa fa-xl fa-user-plus fa-pull-right"></i>
-                </a>
-            </div>
-            <hr>
         </div>
+    </div>
 
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <h4>Students</h4>
+    <div class="card mb-0">
+        <div class="card-body">
+            <div class="row mb-3">
+                <div class="col-md-6 ">
+                    <h4 class="card-title mb-0" id="student-title" th:href="@{~/classroom/data-student}">Students</h4>
+                </div>
+                <div class="col-md-6">
+                    <a id="btn-people-student" th:href="@{~/classroom/people-student}">
+                        <i class="fa fa-xl fa-user-plus fa-pull-right"></i>
+                    </a>
+                </div>
+                <div class="table-responsive text-nowrap">
+                    <table id="table-student" class="table table-striped">
+                        <thead class="table-light">
+                        <tr>
+                            <th>No</th>
+                            <th>Nama</th>
+                            <th>NISN</th>
+                            <th>Gender</th>
+                            <th>Status</th>
+                            <th class="cell-fit">Actions</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
-            <div class="col-md-6">
-                <a id="btn-people-student" th:href="@{~/classroom/people-student}">
-                    <i class="fa fa-xl fa-user-plus fa-pull-right"></i>
-                </a>
-            </div>
-            <hr>
         </div>
     </div>
 </div>
