--- a/src/main/resources/templates/pages/classroom/people.html
+++ b/src/main/resources/templates/pages/classroom/people.html
@@ -40,19 +40,16 @@
                     <h4 class="card-title mb-0" id="teacher-title" th:href="@{~/classroom/data-teacher}">Teachers</h4>
                 </div>
                 <div class="col-md-6">
-                    <a id="btn-people-teacher" th:href="@{~/classroom/people-teacher}">
+                    <a id="btn-people-teacher" th:href="@{~/classroom/{id}/people-teacher(id=${people.courseId})}">
                         <i class="fa fa-xl fa-user-plus fa-pull-right"></i>
                     </a>
                 </div>
                 <div class="table-responsive text-nowrap">
-                    <table id="table-teacher" class="table table-striped">
+                    <table class="table table-striped">
                         <thead class="table-light">
                         <tr>
-                            <th>No</th>
-                            <th>Nomor</th>
-                            <th>Nama</th>
-                            <th>NIK</th>
-                            <th>Status</th>
+                            <th>Course Name</th>
+                            <th>Teacher's Name</th>
                             <th class="cell-fit">Actions</th>
                         </tr>
                         </thead>
@@ -83,8 +80,8 @@
                     <table class="table table-striped">
                         <thead class="table-light">
                         <tr>
-                            <th>No</th>
-                            <th>Nama</th>
+                            <th>Course Name</th>
+                            <th>Student's Name</th>
                             <th class="cell-fit">Actions</th>
                         </tr>
                         </thead>
