--- a/src/main/resources/templates/pages/master/level/edit.html
+++ b/src/main/resources/templates/pages/master/level/edit.html
@@ -1,7 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/level/update}" th:method="post"
       th:object="${level}">
     <input type="hidden" name="id" th:value="${level.id}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Edit Level</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -14,44 +13,45 @@
 <!--            </div>-->
             <div class="row">
                 <div class="col mb-3">
-                    <label for="idLembaga" class="form-label">Lembaga</label>
-                    <select id="idLembaga" name="idLembaga" th:value="${level.idLembaga}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('idLembaga')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="institutionId" class="form-label">Lembaga</label>
+                    <select id="institutionId" name="institutionId" th:value="${level.institutionId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('institutionId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Lembaga</option>
                         <option th:each="item : ${dataLembaga}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == level.idLembaga}"></option>
+                                th:selected="${item.id == level.institutionId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('idLembaga')}" class="invalid-feedback">
-                        <span th:errors="*{idLembaga}"></span>
+                    <div th:if="${#fields.hasErrors('institutionId')}" class="invalid-feedback">
+                        <span th:errors="*{institutionId}"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode Level</label>
-                    <input type="text" id="kode" name="kode" th:value="${level.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="kode" />
-                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
-                        <span th:errors="*{kode}"></span>
+                    <label for="code" class="form-label">code Level</label>
+                    <input type="text" id="code" name="code" th:value="${level.code}"
+                           th:class="${#fields.hasErrors('code')}? 'form-control is-invalid': 'form-control'" placeholder="code" />
+                    <div th:if="${#fields.hasErrors('code')}" class="invalid-feedback">
+                        <span th:errors="*{code}"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama Level</label>
-                    <input type="text" id="nama" name="nama" th:value="${level.nama}"
-                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="nama" />
-                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
-                        <span th:errors="*{nama}"></span>
+                    <label for="name" class="form-label">name Level</label>
+                    <input type="text" id="name" name="name" th:value="${level.name}"
+                           th:class="${#fields.hasErrors('name')}? 'form-control is-invalid': 'form-control'" placeholder="nama" />
+                    <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+                        <span th:errors="*{name}"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="noUrut" class="form-label">No-Urut</label>
-                    <input type="number" id="noUrut" name="noUrut" th:value="${level.noUrut}"
-                           th:class="${#fields.hasErrors('noUrut')}? 'form-control is-invalid': 'form-control'" placeholder="no-urut" />
-                    <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
-                        <span th:errors="*{noUrut}"></span>
+                    <label for="position" class="form-label">No-Urut</label>
+                    <input type="number" id="position" name="position" th:value="${level.position}"
+                           th:class="${#fields.hasErrors('position')}? 'form-control is-invalid': 'form-control'" placeholder="no-urut" />
+                    <div th:if="${#fields.hasErrors('position')}" class="invalid-feedback">
+                        <span th:errors="*{position}"></span>
                     </div>
                 </div>
             </div>
@@ -62,5 +62,4 @@
             </button>
             <button type="submit" class="btn btn-warning">Save Changes</button>
         </div>
-    </div>
 </form>
