--- a/src/main/resources/templates/pages/master/person/add.html
+++ b/src/main/resources/templates/pages/master/person/add.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-3">
+            <div class="row">
                 <div class="col mb-3">
                     <label for="fullName" class="form-label">Nama</label>
                     <input type="text" id="fullName" name="fullName" th:value="${person.fullName}"
